--- a/blog/templates/blog/post_archive_index.html
+++ b/blog/templates/blog/post_archive_index.html
@@ -5,9 +5,11 @@
 <h1>Archive</h1>
 
 <ol class="post-list">
-    <li><h3><a href="{% url post_archive_year 2012 %}">2012</a></h3></li>
-    <li><h3><a href="{% url post_archive_year 2011 %}">2011</a></h3></li>
-    <li><h3><a href="{% url post_archive_year 2010 %}">2010</a></h3></li>
+    {% for year in years %}
+    <li><h3><a href="{% url post_archive_year year %}">{{ year }}</a></h3></li>
+    {% empty %}
+    <li>Sorry no posts available.</li>
+    {% endfor %}
 </ol>
 
 {% endblock %}
