--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% block browsertitle %}AE Blog{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="{{STATIC_URL}}js/modernizr.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Antic+Didone' rel='stylesheet' type='text/css'>
     <link href="{{STATIC_URL}}css/core.css" rel="stylesheet" />
